force-app/main/default/objects/ServiceAppointment/fields/ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Code__c</fullName>
    <formula>Asset__r.ATAK_Project__r.SubProject_ATAK__c</formula>
    <label>ATAK Code</label>
    <type>Text</type>
</CustomField>