force-app/main/default/objects/ServiceAppointment/fields/ATAK_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Name__c</fullName>
    <formula>Asset__r.ATAK_Project__r.Subproject_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATAK Project Name</label>
    <type>Text</type>
</CustomField>