force-app/main/default/objects/ServiceAppointment/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Billing_Types</valueSetName>
    </valueSet>
</CustomField>