force-app/main/default/objects/ServiceAppointment/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <formula>Asset__r.ATAK_Project__r.Cost_centre_Atak_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>