force-app/main/default/objects/ServiceAppointment/fields/Day_Pause_Duration__c.field-meta.xml
<CustomField>
    <fullName>Day_Pause_Duration__c</fullName>
    <label>Day Pause Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>