force-app/main/default/objects/ServiceAppointment/fields/Due_Date_in_the_Past__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_in_the_Past__c</fullName>
    <description>Field to indicate if the Due  date is in the past</description>
    <formula>DATEVALUE( DueDate )  &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date in the past</label>
    <type>Checkbox</type>
</CustomField>