force-app/main/default/objects/ServiceAppointment/fields/Financial_Accounts_Billing__c.field-meta.xml
<CustomField>
    <fullName>Financial_Accounts_Billing__c</fullName>
    <label>Financial Accounts Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>