force-app/main/default/objects/ServiceAppointment/fields/Intervention_Registration__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Registration__c</fullName>
    <formula>TEXT( Account.Intervention_registration__c )&amp;&quot; &quot;&amp;TEXT( Account.Intervention_Registration_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervention Registration</label>
    <type>Text</type>
</CustomField>