force-app/main/default/objects/ServiceAppointment/fields/Night_Pause_Duration__c.field-meta.xml
<CustomField>
    <fullName>Night_Pause_Duration__c</fullName>
    <label>Night Pause Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>