force-app/main/default/objects/ServiceAppointment/fields/Notification_Day__c.field-meta.xml
<CustomField>
    <fullName>Notification_Day__c</fullName>
    <formula>DATEVALUE( SchedStartTime) -   Account.Intervention_Registration_Announcement__c  = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Day</label>
    <type>Checkbox</type>
</CustomField>