force-app/main/default/objects/ServiceAppointment/fields/Number_of_Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assigned_Resources__c</fullName>
    <label>Number of Assigned Resources</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>