force-app/main/default/objects/ServiceAppointment/fields/Optimize__c.field-meta.xml
<CustomField>
    <fullName>Optimize__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optimize</label>
    <type>Checkbox</type>
</CustomField>