force-app/main/default/objects/ServiceAppointment/fields/Original_Earliest_Start_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Original_Earliest_Start_Permitted__c</fullName>
    <label>Original Earliest Start Permitted</label>
    <type>DateTime</type>
</CustomField>