force-app/main/default/objects/ServiceAppointment/fields/Overdue_Reminder_Send__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reminder_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to make sure there is only 1 reminder send when an SA is overdue</description>
    <label>Overdue Reminder Send</label>
    <type>Checkbox</type>
</CustomField>