force-app/main/default/objects/ServiceAppointment/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>