force-app/main/default/objects/ServiceAppointment/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <formula>Asset__r.Recurrence_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurrence</label>
    <type>Text</type>
</CustomField>