force-app/main/default/objects/ServiceAppointment/fields/Scheduling_Notification_Send__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Notification_Send__c</fullName>
    <description>Technical field. use din the flow to send out the notification to the customer that a WO was (re)scheduled</description>
    <label>Scheduling Notification Send</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Send</fullName>
            </value>
            <value>
                <fullName>Send</fullName>
            </value>
            <value>
                <fullName>Resend Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>