force-app/main/default/objects/ServiceAppointment/fields/Travel_is_Done__c.field-meta.xml
<CustomField>
    <fullName>Travel_is_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel is Done</label>
    <type>Checkbox</type>
</CustomField>